playbooks/cluster/templates/manifests/02-apps/00-vaultwarden/01-network-policies.yml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: vaultwarden
  name: default-deny-all
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: vaultwarden
  name: allow-egress-cluster-dns
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: coredns
      ports:
        - protocol: UDP
          port: 53
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: vaultwarden
  name: vaultwarden
spec:
  podSelector:
    matchLabels:
      kalexlab.xyz/app: vaultwarden
      kalexlab.xyz/component: vaultwarden
  policyTypes:
    - Egress
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
          podSelector:
            matchLabels:
              app.kubernetes.io/name: traefik
      ports:
        - protocol: TCP
          port: 8080
  egress:
    - to:
        - podSelector:
            matchLabels:
              kalexlab.xyz/app: vaultwarden
              kalexlab.xyz/component: database
      ports:
        - protocol: TCP
          port: 5432
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  namespace: vaultwarden
  name: database
spec:
  podSelector:
    matchLabels:
      kalexlab.xyz/app: vaultwarden
      kalexlab.xyz/component: database
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: adminerevo
          podSelector:
            matchLabels:
              kalexlab.xyz/app: adminerevo

        - podSelector:
            matchLabels:
              kalexlab.xyz/app: vaultwarden
              kalexlab.xyz/component: vaultwarden
      ports:
        - protocol: TCP
          port: 5432
